<resources>
    <string name="app_name">Device Information</string>

    <string name="usage">This application shows different types of information about your device.\n
        The source code is available at:\n
        https://github.com/tamalnath/DeviceInformation\n
        Please report any issues to:\n
        tamal.nath@gmail.com.</string>
    <string name="unknown">Unknown</string>
    <string name="loading">Loading&#8230;</string>
    <string name="dismiss">Dismiss</string>
    <string name="access_denied">Access %1$s is denied.</string>

    <string name="activity_main">Home</string>

    <string name="fragment_general">General</string>

    <string name="fragment_battery">Battery</string>
    <string name="battery_present">Battery Present</string>
    <string name="battery_status">Battery Status</string>
    <string name="battery_health">Battery Health</string>
    <string name="battery_plugged">Battery Plugged</string>
    <string name="battery_plugged_unplugged">Not Plugged</string>
    <string name="battery_charge">Battery Charged</string>
    <string name="battery_voltage">Battery Voltage</string>
    <string name="battery_temperature">Battery Temperature</string>
    <string name="battery_technology">Battery Technology</string>

    <string name="fragment_network">Network</string>
    <string name="network_active">Active Network</string>
    <string name="activity_networks">All Networks</string>

    <string name="fragment_telephony">Cellular Network</string>

    <string name="fragment_resources">Resources</string>
    <string name="resources_configuration">Configuration</string>
    <string name="resources_display">Display Metrics</string>

    <string name="fragment_sensors">Sensors</string>

    <string name="sensor_unit_ms2">m/s&#178;</string>
    <string name="sensor_unit_ut">&#181;T</string>
    <string name="sensor_unit_rad">rad/s</string>
    <string name="sensor_unit_deg">&#176;</string>
    <string name="sensor_unit_lx">lux</string>
    <string name="sensor_unit_cm">cm</string>
    <string name="sensor_unit_pascal">hPa</string>
    <string name="sensor_unit_percent">%</string>
    <string name="sensor_unit_centigrade">&#176;C</string>
    <string name="sensor_unit_step">steps</string>
    <string name="sensor_value_unit">%1$ .2f %2$s</string>
    <string name="sensor_values_xyz_unit">x=%1$ .2f%4$s, y=%2$ .2f%4$s, z=%3$ .2f%4$s</string>
    <string name="sensor_values_gyroscope_uncalibrated">Rotation: x=%1$ .2f, y=%2$ .2f, z=%3$ .2f rad/s\nDrift: x=%4$ .2f, y=%5$ .2f, z=%6$ .2f rad/s</string>
    <string name="sensor_values_no_value">No value. Event triggered at: %1$tH:%1$tM:%1$tS</string>
    <string name="sensor_value_near">near</string>
    <string name="sensor_value_far">far</string>
    <string name="sensor_type_unknown">Unknown (%1$d)</string>
    <string name="sensor_id">ID</string>
    <string name="sensor_name">Name</string>
    <string name="sensor_type">Type</string>
    <string name="sensor_vendor">Vendor</string>
    <string name="sensor_version">Version</string>
    <string name="sensor_power">Power</string>
    <string name="sensor_power_unit">%1$f mA</string>
    <string name="sensor_delay">Delay</string>
    <string name="sensor_min_delay_unit">Min: %1$d ms</string>
    <string name="sensor_delay_unit">Min: %1$d ms, Max: %2$d ms</string>
    <string name="sensor_resolution">Resolution</string>
    <string name="sensor_resolution_unit">%1$f %2$s</string>
    <string name="sensor_max_range">Maximum Range</string>
    <string name="sensor_reserved_event">Reserved Events</string>
    <string name="sensor_max_event">Maximum Events</string>
    <string name="sensor_event_unit">%1$d/sec</string>
    <string name="sensor_dynamic">Is Dynamic</string>
    <string name="sensor_wake_up">Is Wake Up</string>
    <string name="sensor_additional_info">Additional Information</string>
    <string name="sensor_accuracy">Accuracy</string>
    <string name="sensor_timestamp">Delay</string>

    <string name="fragment_build">Build</string>
    <string name="build_build">Build Information</string>
    <string name="build_environment">Environment Variables</string>
    <string name="build_properties">System Properties</string>

    <string name="fragment_fonts">Fonts</string>
    <string name="fragment_wifi">Wi-Fi</string>
    <string name="wifi_static">Static Information</string>
    <string name="wifi_info">Dynamic Information</string>
    <string name="wifi_dhcp">DHCP Information</string>

    <string name="activity_delegator">Delegator</string>
    <string name="wifi_configurations">Wi-Fi Configurations</string>
    <string name="wifi_scan_results">Scan Results</string>
    <string name="telephony_all_cell_info">All Cell Information</string>
    <string name="telephony_neighboring_cell_info">Neighboring Cell Info</string>

    <string name="fragment_location">Location</string>
    <string name="fragment_activity">Activity</string>
    <string name="recent_tasks">Recent Tasks</string>
    <string name="running_tasks">Running Tasks</string>
    <string name="running_process">Running Process</string>
    <string name="process_error_state">Process Error State</string>
    <string name="running_services">Running Services</string>

</resources>
