<ScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.tamal.deviceinformation.BatteryFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:text="@string/battery_present"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="normal|bold" />

        <TextView
            android:id="@+id/battery_present"
            android:text="@string/unknown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/battery_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="normal|bold" />

        <TextView
            android:id="@+id/battery_status"
            android:text="@string/unknown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/battery_health"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="normal|bold" />

        <TextView
            android:id="@+id/battery_health"
            android:text="@string/unknown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/battery_plugged"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="normal|bold" />

        <TextView
            android:id="@+id/battery_plugged"
            android:text="@string/unknown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/battery_charge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="normal|bold" />

        <TextView
            android:id="@+id/battery_charge"
            android:text="@string/unknown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/battery_voltage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="normal|bold" />

        <TextView
            android:id="@+id/battery_voltage"
            android:text="@string/unknown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/battery_temperature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="normal|bold" />

        <TextView
            android:id="@+id/battery_temperature"
            android:text="@string/unknown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/battery_technology"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="normal|bold" />

        <TextView
            android:id="@+id/battery_technology"
            android:text="@string/unknown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</ScrollView>
