<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.tamal.deviceinformation.GeneralFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/battery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/Heading"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_toLeftOf="@+id/battery_icon"
                android:layout_toStartOf="@+id/battery_icon" />

            <ImageView
                android:id="@+id/battery_icon"
                android:contentDescription="@string/battery"
                app:srcCompat="@android:drawable/ic_lock_idle_low_battery"
                android:layout_height="match_parent"
                android:layout_width="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="@dimen/activity_margin"
                android:layout_marginEnd="@dimen/activity_margin" />

        </RelativeLayout>

        <TextView
            android:text="@string/battery_present"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="normal|bold" />

        <TextView
            android:id="@+id/battery_present"
            android:text="@string/unknown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/battery_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="normal|bold" />

        <TextView
            android:id="@+id/battery_status"
            android:text="@string/unknown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/battery_health"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="normal|bold" />

        <TextView
            android:id="@+id/battery_health"
            android:text="@string/unknown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/battery_plugged"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="normal|bold" />

        <TextView
            android:id="@+id/battery_plugged"
            android:text="@string/unknown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/battery_charge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="normal|bold" />

        <TextView
            android:id="@+id/battery_charge"
            android:text="@string/unknown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/battery_voltage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="normal|bold" />

        <TextView
            android:id="@+id/battery_voltage"
            android:text="@string/unknown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/battery_temperature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="normal|bold" />

        <TextView
            android:id="@+id/battery_temperature"
            android:text="@string/unknown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/battery_technology"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="normal|bold" />

        <TextView
            android:id="@+id/battery_technology"
            android:text="@string/unknown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</ScrollView>
